5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_2603.log
== SUBMITION (2019-07-01 22:00:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
 
x = array(eval(input("v: ")))

x = x

for i in range(4):
	x[:,i] = sorted(a[:,i], reverse = True)
print(a)
-- EXECUTION TIME:
1.3226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    x[:,i] = sorted(a[:,i], reverse = True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:00:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
 
x = array(eval(input("v: ")))

x = x

for i in range(4):
	x[:,i] = sorted(a[:,i], reverse = True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:00:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
 
x = array(eval(input("v: ")))

x = x

for i in range(4):
	x[:,i] = sorted(x[:,i], reverse = True)
print(a)
-- EXECUTION TIME:
0.876546
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 10, in <module>
    print(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:00:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
 
x = array(eval(input("v: ")))

x = x

for i in range(4):
	x[:,i] = sorted(x[:,i], reverse = True)
print(x)
-- EXECUTION TIME:
1.11727
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
